--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PERSONAL_ACCESS_KEY=qdvsiyqx56f3xjp4usd534lwjprxlx7wpd5ukeih3xr5ek5zvesa
+# All organization
+PERSONAL_ACCESS_KEY=3ark7drr7pocq7spo3wyjfyp6upb5a2ilsk6hygbnlc7tj5l324a
 DEVOPS_DOMAIN=https://noresponsive.visualstudio.com
